--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
